ANode/test/data/SMSHOME2/bad/bad6.ecf

#
# test for embedded  manual/comment
#

%comment
	OPERATORS: This is an example of usinh a manual
	First include head.h
	
%manual
    Illegal we cannt have embedded manuals in a comment
%end

%end
 
